// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`literal bit string 1`] = `
{
  "text": "b'011001'",
  "type": "string",
}
`;

exports[`literal bit string with charset 1`] = `
{
  "charset": "big5",
  "string": {
    "text": "b'011001'",
    "type": "string",
  },
  "type": "string_with_charset",
}
`;

exports[`literal boolean 1`] = `
{
  "text": "true",
  "type": "bool",
}
`;

exports[`literal boolean 2`] = `
{
  "text": "TRUE",
  "type": "bool",
}
`;

exports[`literal boolean 3`] = `
{
  "text": "false",
  "type": "bool",
}
`;

exports[`literal boolean 4`] = `
{
  "text": "FALSE",
  "type": "bool",
}
`;

exports[`literal hex literal 1`] = `
{
  "text": "0xAAFF11",
  "type": "string",
}
`;

exports[`literal hex literal with charset 1`] = `
{
  "charset": "utf8",
  "string": {
    "text": "0xAAFF11",
    "type": "string",
  },
  "type": "string_with_charset",
}
`;

exports[`literal hex string 1`] = `
{
  "text": "x'AFC123'",
  "type": "string",
}
`;

exports[`literal hex string with charset 1`] = `
{
  "charset": "utf16le",
  "string": {
    "text": "X'AFC123'",
    "type": "string",
  },
  "type": "string_with_charset",
}
`;

exports[`literal natural character set string 1`] = `
{
  "text": "N'hello'",
  "type": "string",
}
`;

exports[`literal natural character set string with escapes 1`] = `
{
  "text": "n'hel\\'lo'",
  "type": "string",
}
`;

exports[`literal natural character set string with escapes 2`] = `
{
  "text": "N'hel''lo'",
  "type": "string",
}
`;

exports[`literal null 1`] = `
{
  "text": "null",
  "type": "null",
}
`;

exports[`literal null 2`] = `
{
  "text": "NULL",
  "type": "null",
}
`;

exports[`literal number 1`] = `
{
  "text": "0",
  "type": "number",
}
`;

exports[`literal number 2`] = `
{
  "text": "123",
  "type": "number",
}
`;

exports[`literal number 3`] = `
{
  "text": "0.15",
  "type": "number",
}
`;

exports[`literal number 4`] = `
{
  "text": "123e15",
  "type": "number",
}
`;

exports[`literal number 5`] = `
{
  "text": "1.23E+13",
  "type": "number",
}
`;

exports[`literal number 6`] = `
{
  "text": "0.107e-62",
  "type": "number",
}
`;

exports[`literal number 7`] = `
{
  "text": "-6",
  "type": "number",
}
`;

exports[`literal number 8`] = `
{
  "text": "+18",
  "type": "number",
}
`;

exports[`literal single-quoted string 1`] = `
{
  "text": "'hello'",
  "type": "string",
}
`;

exports[`literal single-quoted string with charset 1`] = `
{
  "charset": "binary",
  "string": {
    "text": "'hello'",
    "type": "string",
  },
  "type": "string_with_charset",
}
`;

exports[`literal single-quoted string with charset and comment 1`] = `
{
  "charset": "latin1",
  "string": {
    "leadingComments": [
      {
        "text": "/* comment */",
        "type": "block_comment",
      },
    ],
    "text": "'hello'",
    "type": "string",
  },
  "type": "string_with_charset",
}
`;

exports[`literal single-quoted string with escapes 1`] = `
{
  "text": "'hel\\'lo'",
  "type": "string",
}
`;

exports[`literal single-quoted string with escapes 2`] = `
{
  "text": "'hel''lo'",
  "type": "string",
}
`;
